<resources>
    <string name="app_name">ReviewGame</string>


    <string name="search">Wyszukaj swoja ulubiona gre</string>


    <string name="elderRingTitle">Elder Ring</string>
    <string name="elderRingDescription">Elden Ring to gra RPG akcji autorstwa japońskiego studia
        FromSoftware. Tym razem twórcy postanowili nawiązać współpracę ze znaną osobistością spoza
        branży gier wideo – pisarzem Georgem R. R. Martinem, autorem cyklu "Pieśń Lodu i Ognia"</string>
    <string name="elderRingRating">4.89/5</string>


    <string name="horizonTitle">Horizon Forbidden West</string>
    <string name="horizonDescription">W Horizon Forbidden West trafiamy na zachód
        postapokaliptycznej Ameryki, gdzie Aloy szuka sposobu na uporanie się z nowym zagrożeniem
        dla resztek ludzkości. To druga część serii przygodowych gier akcji z otwartym światem i
        elementami RPG od studia Guerrilla Games.</string>
    <string name="horizonRating">4.89/5</string>

    <string name="dyingLightTitle">Dying Light 2</string>
    <string name="dyingLightDescription">Kontynuacja gry akcji FPP z otwartym światem autorstwa
        polskiego studia Techland, w której eksplorujemy miasto zniszczone przez wirus zmieniający
        ludzi w zombie. Dying Light 2 odróżnia się od poprzednika większym naciskiem na elementy
        RPG, z wyborami moralnymi na czele.</string>
    <string name="dyingLightRating">4.89/5</string>

    <string name="totalWarTitle">Total War: Warhammer 3</string>
    <string name="totalWarDescription">Trzecia i ostatnia część podcyklu serii Total War na
        licencji Warhammera. Total War: Warhammer 3 wprowadza m.in. frakcje Kislevu i Kataju,
        które biorą udział w starciach o jeszcze większym rozmachu niż dotychczas.</string>
    <string name="image">example picture</string>
    <string name="exampleMark">5/5</string>
    <string name="exampleTitle">example title</string>
    <string name="exampleDescription">Example description</string>
    <string name="game_title">Game Title</string>
    <string name="description">Description</string>
    <string name="game_author">Game author</string>
    <string name="game_mark">"Mark"</string>
    <string name="nick">Nick:</string>
    <string name="review_date">"Date: "</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="followed_game">Followed Game:</string>
    <string name="followed_user">Followed User:</string>
    <string name="user_jaccob">User: Jaccob</string>

</resources>