<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".display.DisplayFourBestGames">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="389dp"
        android:layout_height="523dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTextId">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/primaryDarkColor"
                tools:srcCompat="@drawable/elderring" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:background="@color/primaryDarkColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eldenRingId"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/primaryDarkColor"
                        android:text="@string/elderRingTitle"
                        android:textColor="@color/secondaryTextColor" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/elderRingRating" />

                </LinearLayout>

                <TextView
                    android:id="@+id/eldenRingDesc"
                    android:layout_width="262dp"
                    android:layout_height="match_parent"
                    android:text="@string/elderRingDescription"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="10sp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/primaryDarkColor"
                tools:srcCompat="@drawable/horizon" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/horizonTitleId"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@color/primaryDarkColor"
                    android:text="@string/horizonTitle"
                    android:textColor="@color/secondaryTextColor" />

                <TextView
                    android:id="@+id/horizonDescId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/horizonDescription"
                    android:textColor="@color/primaryDarkColor" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/primaryDarkColor"
                tools:srcCompat="@drawable/dyinglight2" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dyingLightTitleId"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryDarkColor"
                    android:text="@string/dyingLightTitle"
                    android:textColor="@color/secondaryTextColor" />

                <TextView
                    android:id="@+id/dyingLightDescId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/dyingLightDescription"
                    android:textColor="@color/primaryDarkColor" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/primaryDarkColor"
                tools:srcCompat="@drawable/totalwar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalWarTitleId"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryDarkColor"
                    android:text="@string/totalWarTitle"
                    android:textColor="@color/secondaryTextColor" />

                <TextView
                    android:id="@+id/totalWarDescId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/totalWarDescription"
                    android:textColor="@color/primaryDarkColor" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/searchTextId"
        android:layout_width="375dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>