<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/vertical_only"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/login_ek1_color"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <LinearLayout
                android:id="@+id/horizontal_only"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/login_ek1_color"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">


                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />

                <TextView
                    android:id="@+id/userID"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/user_jaccob"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/follow_button_user"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/toogle_selector"
                    android:onClick="onClickCustomToggleClick"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/FollowedUserTextViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/followed_user"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/vertical_only"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="150dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/followUserListProfile"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@+id/FollowedUserTextViewProfile" />

        <TextView
            android:id="@+id/FollowedGameTextViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/followed_game"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/followUserListProfile"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="423dp"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/followGameListProfile"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@+id/FollowedGameTextViewProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>